Bug 234752 - Print code returns NS_OK in cases where it should return an error.  Patch by roland.mainz@nrubsig.org, r+sr=roc.