gfx/src/gtk/nsDeviceContextGTK.cpp
@@ -536,7 +536,7 @@ NS_IMETHODIMP nsDeviceContextGTK::GetDeviceContextFor(nsIDeviceContextSpec *aDev
     nsCOMPtr<nsIDeviceContextXp> dcxp(do_CreateInstance(kCDeviceContextXp, &rv));
     NS_ASSERTION(NS_SUCCEEDED(rv), "Couldn't create Xp Device context.");    
     if (NS_FAILED(rv)) 
-      return rv;
+      return NS_ERROR_GFX_COULD_NOT_LOAD_PRINT_MODULE;
     
     rv = dcxp->SetSpec(aDevice);
     if (NS_FAILED(rv)) 
@@ -562,7 +562,7 @@ NS_IMETHODIMP nsDeviceContextGTK::GetDeviceContextFor(nsIDeviceContextSpec *aDev
     nsCOMPtr<nsIDeviceContextPS> dcps(do_CreateInstance(kCDeviceContextPS, &rv));
     NS_ASSERTION(NS_SUCCEEDED(rv), "Couldn't create PS Device context.");
     if (NS_FAILED(rv)) 
-      return rv;
+      return NS_ERROR_GFX_COULD_NOT_LOAD_PRINT_MODULE;
   
     rv = dcps->SetSpec(aDevice);
     if (NS_FAILED(rv)) 
